[package]
name = "labrpc"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["thread-pool"] }
futures-timer = "3.0"
log = "0.4"
prost = "0.12.1"
rand = "0.8.5"

labcodec = { path = "../labcodec" }

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.10.0"
prost-derive = "0.12.1"

[[bench]]
name = "rpc"
path = "benches/rpc.rs"
harness = false
